# UAST

./: README.md  UAST_lecture1_rc_control.ino
data_analysis/: data_analysis.py
data_analysis/resources/: motor_test.csv
data_analysis/results/: README.rst
motor_controller/: command_sender.py  motor_controller.ino
w09-motor_control/: .gitignore
w10-UAV_attitude/: .gitignore
w10-UAV_attitude/exercise_imu/: imu_box3d.py  imu_exercise.py  imu_exercise_kalman.py
w11-UAS_navigation/exercise_nmea_data/: exportkml.py  nmea_read.py  ublox_gpgga.txt
w11-UAS_navigation/exercise_utm/: utm_test.py
w12-gps_route/gps-route/: hermite.py  main.py  outliers.py  plotter.py  polygon_approximation.py  remove_outliers.py  transverse_mercator.py
w12-gps_route/gps-route/resources/: README.rst
w14-radiofrecuency/fresnel-zones/: fresnel_plotting.py
w16-telemetry/mavlink/catkin_ws/mavlink_lora/: CMakeLists.txt  package.xml  setup.py
w16-telemetry/mavlink/catkin_ws/mavlink_lora/scripts/: get_bat.py  mavlink_lora_get_param_list.py  scripts.py
w16-telemetry/mavlink/catkin_ws/mavlink_lora/src/: mavlink_lora_lib.c  mavlink_lora_lib.h  mavlink_lora_node.cpp
w18-remote-control/command-sender/: main.py
w18-remote-control/receiver-parser/: receiver-parser.py
w18-remote-control/sdu_uas_tx_v03-2018_fw/: sdu_uas_tx_v03-2018_fw.ino
w19-full-system-test/record_track_and_upload_to_drone/: main.py  mission.plan  plotter.py  polygon_approximation.py  qgc_export.py  transverse_mercator.py  utm.py  utm_geo_convert.py
w9-motor_control/motor_controller/: motor_controller.ino
(+4 files in other folders)
